# quantum-chess

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  ascii.sh  build.sh  client.sh  install.sh  run.sh  sdl.sh  server.sh  test.sh  uninstall.sh  valclient.sh  valserver.sh  valtest.sh  vrun.sh
src/: CMakeLists.txt  ascii_chess.cpp  ascii_chess.h  board.cpp  board.h  chessman.cpp  chessman.h  main.cpp  position.cpp  position.h  quantum_position_tree.cpp  quantum_position_tree.h
src/ascii_chess/: CMakeLists.txt  ascii_board.cpp  ascii_board.h  ascii_chess.cpp  ascii_chess.h  ascii_chessman.h  main.cpp
src/chat/: .gitignore  CMakeLists.txt  client_handler.h  common_socket.cpp  common_socket.h  main.cpp  match.cpp  match.h  server.cpp  server.h  thread_safe_queue.h
src/chat/Client/: .gitignore  CMakeLists.txt  client.cpp  client.h  client_protocol.cpp  client_protocol.h  common_packet.cpp  common_packet.h  common_socket.cpp  common_socket.h  main.cpp  remote_client_instructions.cpp  remote_client_instructions.h  remote_clients_threads.cpp  remote_clients_threads.h  thread.cpp  thread.h  unique_ptr.h
src/chat/Server/: CMakeLists.txt  blocking_queue.cpp  blocking_queue.h  client_handler.cpp  client_handler.h  clients_threads.cpp  clients_threads.h  common_socket.h  common_socket_closed.h  instructions.cpp  instructions.h  main.cpp  match.cpp  match.h  matches_repository.cpp  matches_repository.h  nick_names_repository.cpp  nick_names_repository.h  protocol.cpp  protocol.h  server.cpp  server.h  server_protocol.cpp  server_protocol.h  thread.cpp  thread.h  thread_safe_queue.cpp  thread_safe_queue.h  unique_ptr.h
src/chessman/: CMakeLists.txt  bishop.cpp  bishop.h  chessman.cpp  chessman.h  chessman_container.cpp  chessman_container.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  tower.cpp  tower.h
src/client/: CMakeLists.txt  client.cpp  client.h  config_file.cpp  config_file.h  main.cpp  main_drawer.cpp  main_drawer.h  position.cpp  position.h
src/client/ascii/: ascii_board.h  ascii_chessman.cpp
src/client/chat/: font.h  text_sprite.cpp  text_sprite.h
src/client/communication/: CMakeLists.txt  action_thread.cpp  action_thread.h  chessman_data.cpp  chessman_data.h  client_protocol.cpp  client_protocol.h  remote_client_instructions.cpp  remote_client_instructions.h  remote_clients_threads.cpp  remote_clients_threads.h
src/client/game/: CMakeLists.txt  board.cpp  board.h  board_position.cpp  board_position.h  chat.cpp  chat.h  chess_log.cpp  chess_log.h  chessman.cpp  chessman.h  client_board.cpp  drawable_board.cpp  drawable_board.h  drawable_chess.cpp  drawable_chess.h  drawable_chessman.cpp  drawable_chessman.h  drawable_tile.cpp  drawable_tile.h  error_log.cpp  error_log.h  game.cpp  game.h  message_container.h  position.cpp  position.h  tile.cpp  tile.h  turn_log.cpp  turn_log.h
src/client/logic/: CMakeLists.txt  button.cpp  button.h  text_entry.cpp  text_entry.h  text_entry_button.cpp  text_entry_button.h
src/client/login/: CMakeLists.txt  invalid_nick_name_exception.h  login.cpp  login.h  login_handler_thread.cpp  login_handler_thread.h  login_state.cpp  login_state.h  login_state_handler.cpp  login_state_handler.h  unavailable_role_exception.h
src/client/sdl/: CMakeLists.txt  button.cpp  button.h  chessman_sprite_repository.cpp  chessman_sprite_repository.h  coordinate_transformer.cpp  coordinate_transformer.h  drawable_button.cpp  drawable_button.h  drawable_text_entry_button.cpp  drawable_text_entry_button.h  event_handler.cpp  event_handler.h  event_handler_thread.cpp  event_handler_thread.h  font.cpp  font.h  game_scene.cpp  game_scene.h  handler_thread.cpp  handler_thread.h  lobby.cpp  lobby.h  lobby_handler_thread.cpp  lobby_handler_thread.h  login.cpp  login.h  login_handler_thread.cpp  login_handler_thread.h  login_renderer.cpp  login_renderer.h  login_scene.cpp  login_scene.h  login_state.cpp  login_state.h  login_state_handler.cpp  login_state_handler.h  pixel_coordinate.cpp  pixel_coordinate.h  renderer.cpp  (+17 more)
src/client/src/: CMakeLists.txt  action_thread.cpp  action_thread.h  ascii_board.cpp  ascii_board.h  ascii_chessman.h  client.cpp  client.h  client_protocol.cpp  client_protocol.h  main.cpp  position.cpp  position.h  remote_client_instructions.cpp  remote_client_instructions.h  remote_clients_threads.cpp  remote_clients_threads.h
src/common/: blocking_queue.h  client_data.cpp  network.cpp  network.h  network_address_info_exception.cpp  packet.cpp  packet.h  protocol.cpp  protocol.h  socket.cpp  socket.h  socket_closed.h  socket_exception.cpp  socket_exception.h  thread.cpp  thread.h  unique_ptr.h
src/common/src/: CMakeLists.txt  blocking_queue.h  client_data.cpp  client_data.h  client_data_repository.cpp  client_data_repository.h  network_address_info_exception.cpp  network_address_info_exception.h  packet.cpp  packet.h  protocol.cpp  protocol.h  socket.cpp  socket.h  socket_exception.h  thread.cpp  thread.h  unique_ptr.h
src/quantum_chess/: CMakeLists.txt  board.cpp  board.h  chess_exception.h  position.cpp  position.h  quantum_position.cpp  quantum_position.h  quantum_position_tree.cpp  quantum_position_tree.h
src/quantum_chess/chessman/: CMakeLists.txt  bishop.cpp  bishop.h  chessman.cpp  chessman.h  chessman_container.cpp  chessman_container.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  tower.cpp  tower.h
src/sdl/: CMakeLists.txt  board.cpp  board.h  chess_exception.cpp  chess_exception.h  chessman.cpp  chessman.h  coordinate_transformer.h  event_handler.cpp  event_handler.h  main.cpp  pixel_coordinate.cpp  pixel_coordinate.h  position.cpp  position.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sprite.cpp  sprite.h  tile.cpp  tile.h  utility.cpp  utility.h  window.cpp  window.h
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
src/server/communication/: CMakeLists.txt  (+20 more)
test/: CMakeLists.txt  test.cpp  test_board.cpp  test_chessman.cpp  test_position.cpp  test_pseudo_random_coin.cpp  test_quantum_position_tree.cpp
(+226 files in other folders)
